--- a/NetworksSummer2021-IndividualMovement.Rmd
+++ b/NetworksSummer2021-IndividualMovement.Rmd
@@ -202,3 +202,7 @@ ggsave("images/FirstNestVisits-PathLength.png",
 ```
 
 Here we see that again nest 72 has the most direct routes; in fact there are several ants that went directly there -- something that never happened for any other nest.
+
+### Simon's Work
+
+Test
