--- a/NetworksSummer2021-IndividualMovement.Rmd
+++ b/NetworksSummer2021-IndividualMovement.Rmd
@@ -334,27 +334,28 @@ Are ants generally more likely to move toward or away from the trunk? How does t
 
 Analysis including ant choices both before and after inspection, without differentiating between the two.
 ```{r}
-# modify this
 turn_choices_by_ant_trunk <- turn_choices %>% 
   group_by(Colony,Ant.ID) %>%
   #filter(Num.Inspections==0) %>% Unlike with the past analyses, we don't want 
   # to filter out the decisions made after inspection.
   filter(Ant.In.Pair=="A") %>% # Still do filter out the second ant in the pair 
   #because it might be influenced by the first
+  filter(Direction.From!="main") %>% #also only include turns where ant has choice between toward and away, 
+  # not ones where it's away either way (i.e. turning from main)
   summarize(num_turns=n(), 
             turns_to_trunk=sum(Turn.Trunk=="to.trunk",na.rm=T), 
             turns_away_from_trunk=sum(Turn.Trunk=="away.from.trunk",na.rm=T), 
-            total_trunk_turns=turns_to_trunk+turns_away_from_trunk) %>%
+            total_turns=turns_to_trunk+turns_away_from_trunk) %>%
   ungroup()
 
-trunk.model <- lm(turns_to_trunk ~ total_trunk_turns + 0,
+trunk.model <- lm(turns_to_trunk ~ total_turns + 0,
                   data=turn_choices_by_ant_trunk)
-no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_trunk_turns)+0, 
+no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_turns)+0, 
                     data=turn_choices_by_ant_trunk)
 summary(trunk.model)
 anova(trunk.model,no.bias.model)
 ```
-Like when analyzing left vs right or wide vs narrow turns the ants made, the no bias model is that the ants have a 50:50 chance of picking either option between "to trunk" or "away from trunk". It appears that ants turn toward the trunk about 37.920% of the time overall.
+Like when analyzing left vs right or wide vs narrow turns the ants made, the no bias model is that the ants have a 50:50 chance of picking either option between "to trunk" or "away from trunk" (if we only consider turns that present a choice between toward and away). It appears that ants turn toward the trunk about 59.897% of the time overall.
 
 How does the likelihood of moving toward the trunk differ before and after an ant has inspected? (e.g. do ants tend to go to the trunk after inspecting at a tip?)
 ```{r}
@@ -364,15 +365,16 @@ turn_choices_trunk_before_inspect <- turn_choices %>%
   group_by(Colony,Ant.ID) %>%
   filter(Num.Inspections==0) %>% # ant has not inspected yet
   filter(Ant.In.Pair=="A") %>% 
+  filter(Direction.From!="main") %>%
   summarize(num_turns=n(), 
             turns_to_trunk=sum(Turn.Trunk=="to.trunk",na.rm=T), 
             turns_away_from_trunk=sum(Turn.Trunk=="away.from.trunk",na.rm=T), 
-            total_trunk_turns=turns_to_trunk+turns_away_from_trunk) %>%
+            total_turns=turns_to_trunk+turns_away_from_trunk) %>%
   ungroup()
 
-trunk.model <- lm(turns_to_trunk ~ total_trunk_turns + 0,
+trunk.model <- lm(turns_to_trunk ~ total_turns + 0,
                   data=turn_choices_trunk_before_inspect)
-no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_trunk_turns)+0, 
+no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_turns)+0, 
                     data=turn_choices_trunk_before_inspect)
 summary(trunk.model)
 anova(trunk.model,no.bias.model)
@@ -383,17 +385,56 @@ turn_choices_trunk_after_inspect <- turn_choices %>%
   group_by(Colony,Ant.ID) %>%
   filter(Num.Inspections!=0) %>% # ant has already inspected
   filter(Ant.In.Pair=="A") %>% 
+  filter(Direction.From!="main") %>%
   summarize(num_turns=n(), 
             turns_to_trunk=sum(Turn.Trunk=="to.trunk",na.rm=T), 
             turns_away_from_trunk=sum(Turn.Trunk=="away.from.trunk",na.rm=T), 
-            total_trunk_turns=turns_to_trunk+turns_away_from_trunk) %>%
+            total_turns=turns_to_trunk+turns_away_from_trunk) %>%
   ungroup()
 
-trunk.model <- lm(turns_to_trunk ~ total_trunk_turns + 0,
+trunk.model <- lm(turns_to_trunk ~ total_turns + 0,
                   data=turn_choices_trunk_after_inspect)
-no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_trunk_turns)+0, 
+no.bias.model <- lm(turns_to_trunk ~ offset(0.5*total_turns)+0, 
                     data=turn_choices_trunk_after_inspect)
 summary(trunk.model)
 anova(trunk.model,no.bias.model)
 ```
-Before inspecting, the ants have at 36.336% chance of turning toward the trunk. After inspecting, that chance is 38.977%. I could do a statistical test to determine whether this difference in proportions is significant, but that's not the focus here. I could also distinguish between number of inspections done and do ANOVA based on that, but I'm not sure whether that's useful to know or not.
+Before inspecting, the ants have at 61.162% chance of turning toward the trunk. After inspecting, that chance is 59.320%. I could do a statistical test to determine whether this difference in proportions is significant, but that's not the focus here. I could also distinguish between number of inspections done and do ANOVA based on that, but I'm not sure whether that's useful to know or not.
+
+Visualizing the data on turn choices toward/away from trunk overall (adapting code used to visualize the likelihood of right turns):
+```{r}
+max_turns_trunk <- max(turn_choices_by_ant_trunk$total_turns)
+ggplot(turn_choices_by_ant_trunk, aes(x=total_turns,y=turns_to_trunk)) + 
+  geom_point(aes(color=Colony)) + 
+  geom_smooth(method="lm", formula=y ~ x + 0, color="black") +
+  geom_abline(slope=0.5,intercept=0,lty=2) + 
+  xlab("Total number of turns") + ylab("Number of turns to trunk") +
+  xlim(0,max_turns_trunk) +
+  theme_minimal(base_size = 25)
+ggsave("images/ToTrunkvsTotalTurns.png", 
+       dpi=300, width = 8, height = 5, units = "in")
+```
+
+
+### Examining sequences of turns
+If an ant turns [left/right/U-turn], what is the likelihood that the next turn will be [left/right/U-turn]?
+e.g. How often is a right turn followed by a left turn? By a right turn? By a U-turn?
+```{r}
+#Need to consider all possible turn choices
+#use lag/lead to mutate new var
+#would probably be better to make a 3x3 table
+turn_choices_seq <- turn_choices %>%
+  group_by(Colony,Ant.ID) %>%
+  filter(Num.Inspections==0) %>%
+  filter(Ant.In.Pair=="A") %>% 
+  mutate(Next.Turn.Type = lead(Turn.Type)) %>%
+  #filter(Next.Turn.Type != NA) %>% # want to remove the turns for which Next.Turn.Type == NA
+  ungroup()
+
+#View(turn_choices_seq %>% select(Date, Colony, Ant.ID, Turn.Type, Next.Turn.Type))
+Turn.Seq.Pair <- c(rep(c("test1", "test2"), times=length(turn_choices_seq$Turn.Type)))
+for (i in length(turn_choices_seq$Turn.Type)) {
+  Turn.Seq.Pair[i] <- c(turn_choices_seq$Turn.Type[i], turn_choices_seq$Next.Turn.Type[i])
+}
+```
+
